--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: SMAP Today
+description: A website for my SMAP Today project. 
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://gillilanda.github.io/smaptoday/
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  SMAP Today Repository: https://gillilanda.github.io/smaptoday/
