--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,12 @@ url: https://gillilanda.github.io/smaptoday/
 
 aux_links:
   SMAP Today Repository: https://gillilanda.github.io/smaptoday/
+
+  
+# Enable or disable the side/mobile menu globally
+# Nav menu can also be selectively enabled or disabled using page variables or the minimal layout
+nav_enabled: true
+
+# Sort order for navigation links
+# nav_sort: case_insensitive # default, equivalent to nil
+nav_sort: case_sensitive # Capital letters sorted before lowercase
